k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sansculottides
  name: sansculottides
  namespace: repcal
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sansculottides
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sansculottides
    spec:
      containers:
      - image: tupperward/repcal:v3
        imagePullPolicy: Always
        name: sansculottides
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: repcal-db
          mountPath: /data
      volumes:
      - name: repcal-db
        persistentVolumeClaim:
          claimName: repcal-db
