k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod-issuer
  name: frenchrepublican.info
  namespace: repcal
spec:
  ingressClassName: nginx
  rules:
  - host: frenchrepublican.info
    http:
      paths:
      - backend:
          service:
            name: sansculottides
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - frenchrepublican.info
    secretName: fr-prod-sansculottides-tls
